objects/zkusps__Preference__c.object
<CustomObject>
    <customHelpPage>zkusps__PreferenceHelp</customHelpPage>
    <fields>
        <fullName>zkusps__accountContactEmail__c</fullName>
        <label>Account Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkusps__accountContactName__c</fullName>
        <label>Account Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__accountContactPhone__c</fullName>
        <label>Account Contact Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__accountId__c</fullName>
        <label>Account ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__accountPassphrase__c</fullName>
        <label>Account  Passphrase</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkusps__billingCity__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__billingPostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__billingState__c</fullName>
        <label>Billing State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__billingStreet__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkusps__companyName__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__creditCardExpirationMonth__c</fullName>
        <label>Credit Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__creditCardExpirationYear__c</fullName>
        <label>Credit Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__creditCardNumber__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkusps__creditCardType__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                    <default>true</default>
                    <label>Visa</label>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkusps__customerUniqueId__c</fullName>
        <label>Customer Unique ID</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkusps__lastBoughtPostageAmount__c</fullName>
        <label>Last Bought Postage Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__lastBoughtPostageTime__c</fullName>
        <label>Last Bought Postage Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkusps__mailingCity__c</fullName>
        <label>Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__mailingPostalCode__c</fullName>
        <label>Mailing Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__mailingState__c</fullName>
        <label>Mailing State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__mailingStreet__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkusps__nameOnCard__c</fullName>
        <label>Name on Card</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__termsAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__zkModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Express1 Billing Preference</label>
    <listViews>
        <fullName>Nolan_Daigle_Preference</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkusps__All</fullName>
        <columns>NAME</columns>
        <columns>zkusps__accountId__c</columns>
        <columns>zkusps__billingStreet__c</columns>
        <columns>zkusps__billingCity__c</columns>
        <columns>zkusps__billingState__c</columns>
        <columns>zkusps__billingPostalCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Billing-Preference-{00000000}</displayFormat>
        <label>Billing Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Express1 Billing Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>